; ModuleID = '/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_buffer.c_test_buffer_list_full.c'
source_filename = "/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_buffer.c_test_buffer_list_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.test_buffer_list_aggregate_ctx = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@teststr4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**)* @test_buffer_list_full to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_buffer_list_full(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca %struct.test_buffer_list_aggregate_ctx*, align 8
  store i8** %0, i8*** %2, align 8
  %4 = load i8**, i8*** %2, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = bitcast i8* %5 to %struct.test_buffer_list_aggregate_ctx*
  store %struct.test_buffer_list_aggregate_ctx* %6, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %7 = load %struct.test_buffer_list_aggregate_ctx*, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.test_buffer_list_aggregate_ctx, %struct.test_buffer_list_aggregate_ctx* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @assert_int_equal(i32 %11, i32 3)
  %13 = load %struct.test_buffer_list_aggregate_ctx*, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %14 = getelementptr inbounds %struct.test_buffer_list_aggregate_ctx, %struct.test_buffer_list_aggregate_ctx* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = load i32, i32* @teststr4, align 4
  %17 = call i32 @buffer_list_push(%struct.TYPE_2__* %15, i32 %16)
  %18 = load %struct.test_buffer_list_aggregate_ctx*, %struct.test_buffer_list_aggregate_ctx** %3, align 8
  %19 = getelementptr inbounds %struct.test_buffer_list_aggregate_ctx, %struct.test_buffer_list_aggregate_ctx* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @assert_int_equal(i32 %22, i32 3)
  ret void
}

declare dso_local i32 @assert_int_equal(i32, i32) #1

declare dso_local i32 @buffer_list_push(%struct.TYPE_2__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
